2004-04-15  Andrew Cagney  <cagney@redhat.com>

	* observer.c (normal_stop_subject, observer_notify_normal_stop)
	(observer_normal_stop_notification_stub)
	(observer_attach_normal_stop, observer_detach_normal_stop):
	Delete, replaced by #include "observer.inc".
	* infrun.c (normal_stop): Pass "stop_bpstat" to
	observer_notify_normal_stop.
	* Makefile.in (observer_inc): Define.
	(observer.o): Update dependencies.
	(observer.h, observer.inc): New rules.
	* observer.h: Delete file.
	* observer.sh: New file.

2004-04-15  Mark Kettenis  <kettenis@gnu.org>

	* vax-tdep.c (vax_frame_cache): Fix typo.

2004-04-14  Mark Kettenis  <kettenis@gnu.org>

	* NEWS (New native configurations): Mention NetBSD/vax.
	* configure.host: Add vax-*-netbsdelf* and vax-*-netbsd*.
	* config/vax/nbsdelf.mh: New file.
	* config/vax/nbsdaout.mh: New file.
	* config/vax/nm-nbsd.h: New file.
	* config/vax/nm-nbsdaout.h: New file.

	* vaxnbsd-tdep.c: New file.
	* Makefile.in (vaxnbsd-tdep.o): New dependency.
	* configure.tgt: Add vax-*-netbsd* and vax-*-openbsd*.
	* config/vax/nbsd.mt: New file.
	* config/vax/tm-nbsd.h: New file.

	* Makefile.in (vaxbsd-nat.o): New dependency.

	* vax-tdep.h (vax_regnum): Add VAX_R0_REGNUM and VAX_R1_REGNUM.
	* vax-tdep.c (vax_store_arguments): Remove struct_return and
	struct_addr arguments.  Don't push return value address.
	(vax_push_dummy_call): Don't pass STRUCT_RETURN and STRUCT_ADDR as
	arguments to vax_store_arguments.  Store return value address in
	R1.
	(vax_store_struct_return, vax_extract_return_value)
	(vax_store_return_value): Remove functions.
	(vax_return_value): New function.
	(vax_gdbarch_init): Set return value.  Don't set
	deprecated_store_struct_return, deprecated_extract_struct_return
	and deprecated_store_return_value.

2004-04-14  Andreas Schwab  <schwab@suse.de>

	* ia64-tdep.c (ia64_libunwind_frame_prev_register): Handle null
	value buffer.
	* libunwind-frame.c (libunwind_frame_prev_register): Likewise.
