@@ -1,3 +1,12 @@
+2004-04-15  Mark Kettenis  <kettenis@gnu.org>
+
+	* vax-tdep.c: Include "regset.h".
+	(vax_supply_gregset): New function.
+	(vax_gregset): New variable.
+	(vax_regset_from_core_section): New function.
+	(vax_gdbarch_init): Set regset_from_core_section.
+	* Makefile.in (vax-tdep.o): Update dependencies.
+
 2004-04-15  Andrew Cagney  <cagney@redhat.com>
 
 	* observer.c (normal_stop_subject, observer_notify_normal_stop)
